--- a/src/main/resources/static/appPasteur/modules/energy/analysis/report/report-view.html
+++ b/src/main/resources/static/appPasteur/modules/energy/analysis/report/report-view.html
@@ -162,37 +162,37 @@
 	<tr>
 		<th rowspan="5">환 경</th>
 		<th colspan="2">보일러(1)(2) 탄소배출량(toe)</th>
-		<td>&nbsp;{{reportEntity.co21SumText}}</td>
-		<td>&nbsp;{{reportEntity.co21TodayText}}</td>
-		<td>&nbsp;{{reportEntity.co21TotalText}}</td>
+		<td>&nbsp;{{reportEntity.co21Sum | number:6}}</td>
+		<td>&nbsp;{{reportEntity.co21Today | number:6}}</td>
+		<td>&nbsp;{{reportEntity.co21Total | number:6}}</td>
 		<td>1(toe) = 0.001043(Nm3) </td>
 	</tr>
 	<tr>
 		<th colspan="2">열량계(1)(2) 탄소배출량(toe)</th>
-		<td>&nbsp;{{reportEntity.co22SumText}}</td>
-		<td>&nbsp;{{reportEntity.co22TodayText}}</td>
-		<td>&nbsp;{{reportEntity.co22TotalText}}</td>
+		<td>&nbsp;{{reportEntity.co22Sum | number:6}}</td>
+		<td>&nbsp;{{reportEntity.co22Today | number:6}}</td>
+		<td>&nbsp;{{reportEntity.co22Total | number:6}}</td>
 		<td>1(toe) = 10(Gcal)</td>
 	</tr>
 	<tr>
 		<th colspan="2">경유 탄소배출량(toe)</th>
-		<td>&nbsp;{{reportEntity.co23SumText}}</td>
-		<td>&nbsp;{{reportEntity.co23TodayText}}</td>
-		<td>&nbsp;{{reportEntity.co23TotalText}}</td>
+		<td>&nbsp;{{reportEntity.co23Sum | number:6}}</td>
+		<td>&nbsp;{{reportEntity.co23Today | number:6}}</td>
+		<td>&nbsp;{{reportEntity.co23Total | number:6}}</td>
 		<td>1(toe) = 0.000901(l)</td>
 	</tr>
 	<tr>
 		<th colspan="2">전력량 탄소배출량(toe)</th>
-		<td>&nbsp;{{reportEntity.co24SumText}}</td>
-		<td>&nbsp;{{reportEntity.co24TodayText}}</td>
-		<td>&nbsp;{{reportEntity.co24TotalText}}</td>
+		<td>&nbsp;{{reportEntity.co24Sum | number:6}}</td>
+		<td>&nbsp;{{reportEntity.co24Today | number:6}}</td>
+		<td>&nbsp;{{reportEntity.co24Total | number:6}}</td>
 		<td>1(toe) = 0.00023(Kwh) </td>
 	</tr>
 	<tr>
 		<th colspan="2">총 합</th>
-		<td>&nbsp;{{reportEntity.co20SumText}}</td>
-		<td>&nbsp;{{reportEntity.co20TodayText}}</td>
-		<td>&nbsp;{{reportEntity.co20TotalText}}</td>
+		<td>&nbsp;{{reportEntity.co20Sum | number:6}}</td>
+		<td>&nbsp;{{reportEntity.co20Today | number:6}}</td>
+		<td>&nbsp;{{reportEntity.co20Total | number:6}}</td>
 		<td>-</td>
 	</tr>
 	</tbody>
