--- a/src/main/resources/static/appPasteur/modules/others/elevator/point-monitor/point-monitor.html
+++ b/src/main/resources/static/appPasteur/modules/others/elevator/point-monitor/point-monitor.html
@@ -23,3 +23,22 @@
 	</div>
 
 </div>
+
+<script type="text/ng-template" id="network-confirm-content.html">
+	<div class="modal-header">
+		<h4 class="modal-title text-align-center fw-bold mt" id="myModalLabel18">연결 오류</h4>
+	</div>
+	<div class="modal-body">	
+		<div class="row">
+			<div class="col-md-12">
+			<p class="text-align-center fs-mini text-muted mt-sm">
+			데이터 서버와의 연결이 중지되었습니다. 네트워크 환경을 확인해 주십시오.
+			</p>
+			</div>
+		</div>
+	</div>
+	<div class="modal-footer">
+		<button type="button" class="btn btn-default btn-inverse" data-ng-click="cancel()">중지</button>
+		<button type="button" class="btn btn-primary btn-rounded" data-ng-click="ok()">연결 재시도</button>
+	</div>
+</script>
